// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indexing indexes posts. 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "facets": Array [
          Object {
            "features": Array [
              Object {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(2)",
              },
            ],
            "index": Object {
              "byteEnd": 9,
              "byteStart": 0,
            },
          },
        ],
        "text": "@bob.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
}
`;

exports[`indexing indexes posts. 2`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "facets": Array [
          Object {
            "features": Array [
              Object {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(2)",
              },
            ],
            "index": Object {
              "byteEnd": 11,
              "byteStart": 0,
            },
          },
        ],
        "text": "@carol.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
}
`;

exports[`indexing indexes posts. 3`] = `
Object {
  "createMessages": Array [
    Object {
      "author": "user(1)",
      "reason": "mention",
      "recordCid": "cids(0)",
      "recordUri": "record(0)",
      "type": "create_notification",
      "userDid": "user(0)",
    },
  ],
  "deletedMessages": Array [
    Object {
      "recordUri": "record(0)",
      "type": "delete_notifications",
    },
  ],
  "updateMessages": Array [
    Object {
      "recordUri": "record(0)",
      "type": "delete_notifications",
    },
    Object {
      "author": "user(1)",
      "reason": "mention",
      "recordCid": "cids(1)",
      "recordUri": "record(0)",
      "type": "create_notification",
      "userDid": "user(2)",
    },
  ],
}
`;

exports[`indexing indexes profiles. 1`] = `
Object {
  "did": "user(0)",
  "displayName": "dan",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 2`] = `
Object {
  "did": "user(0)",
  "displayName": "danny",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 3`] = `
Object {
  "did": "user(0)",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 4`] = `
Object {
  "createMessages": Array [],
  "deletedMessages": Array [],
  "updateMessages": Array [],
}
`;
